# ib-practica11-oop-cmake-alsalo67

./: README.md
ejercicio_1/: CMakeLists.txt
ejercicio_1/src/: fechas.cpp
ejercicio_2/:  operadores_main.cpp  CMakeLists.txt  operadores_main.cpp
ejercicio_2/src/: operadores_main.cpp
modficacion_ejercicio_1/: modificación_ejercicio_1.cpp.cpp
